--- a/index.html
+++ b/index.html
@@ -110,14 +110,14 @@
                         </div>
                         <div class="carousel-inner">
                             <div class="carousel-item active">
-                                <img src="/Dvase/media/bg.jpg" class="d-block w-100 m-auto" alt="">
+                                <img src="/bg.jpg" class="d-block w-100 m-auto" alt="">
                                 <div class="carousel-caption d-none d-sm-block">
                                     <h5>Climate</h5>
                                     <p>Click for climate change.</p>
                                 </div>
                             </div>
                             <div class="carousel-item">
-                                <img src="/Dvase/media/bg2.jpg" class="d-block w-100 m-auto" alt="">
+                                <img src="/bg2.jpg" class="d-block w-100 m-auto" alt="">
                                 <div class="carousel-caption d-none d-sm-block">
                                     <h5>Syber of Earth</h5>
                                     <p>Syber Security Dot in Earth's countries.</p>
